--- a/main.css
+++ b/main.css
@@ -1,28 +1,41 @@
-body {font-family:sans-serif;}
-
-section {background-color:#eee;}
-
-article {background-color:#fff;}
-
-footer {
-  border:solid 1px;
+body {
+  font-family: sans-serif;
 }
 
-a {color:green;}
+section {
+  background-color: #eee;
+}
+
+article {
+  background-color: #fff;
+}
+
+footer {
+  border: solid 1px;
+}
+
+a {
+  color: green;
+}
 
 article, section, footer {
-  padding:10px;
-  border-radius:16px;
+  padding: 10px;
+  border-radius: 16px;
 }
 
 nav {
-  margin:10px;
-  > a{
-    margin:10px;
-    color:gray;
-    text-decoration:none;
-  }
+  margin: 10px;
+}
+nav > a {
+  margin: 10px;
+  color: gray;
+  text-decoration: none;
 }
 
-div > p {color:red;}
-article + article {margin-top:10px;}
+div > p {
+  color: red;
+}
+
+article + article {
+  margin-top: 10px;
+}
